--- a/moro_tf/CMakeLists.txt
+++ b/moro_tf/CMakeLists.txt
@@ -28,6 +28,8 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 rosbuild_add_executable(tf_broadcaster src/tf_broadcaster.cpp)
 rosbuild_add_executable(tf_listener src/tf_listener.cpp)
+rosbuild_add_executable(taurob_state_publisher src/tf_robotstate_broadcaster.cpp)
 target_link_libraries(tf_broadcaster ${catkin_LIBRARIES})
 target_link_libraries(tf_listener ${catkin_LIBRARIES})
+target_link_libraries(taurob_state_publisher ${catkin_LIBRARIES})
 #target_link_libraries(example ${PROJECT_NAME})
