--- a/moro_tf/CMakeLists.txt
+++ b/moro_tf/CMakeLists.txt
@@ -23,13 +23,18 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 #common commands for building c++ executables and librariesl
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
+rosbuild_add_library(libMoroTF src/libMoroTF.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
-rosbuild_add_executable(tf_broadcaster src/tf_broadcaster.cpp)
-rosbuild_add_executable(tf_listener src/tf_listener.cpp)
-rosbuild_add_executable(taurob_state_publisher src/tf_robotstate_broadcaster.cpp)
-target_link_libraries(tf_broadcaster ${catkin_LIBRARIES})
-target_link_libraries(tf_listener ${catkin_LIBRARIES})
-target_link_libraries(taurob_state_publisher ${catkin_LIBRARIES})
+rosbuild_add_executable(statepublisher src/publish_state.cpp)
+#rosbuild_add_executable(tf_broadcaster src/tf_broadcaster.cpp)
+rosbuild_add_executable(assemblescans src/assemble_scans.cpp)
+#rosbuild_add_executable(tf_listener src/tf_listener.cpp)
+#rosbuild_add_executable(taurob_state_publisher src/tf_robotstate_broadcaster.cpp)
+#target_link_libraries(tf_broadcaster ${catkin_LIBRARIES})
+#target_link_libraries(tf_listener ${catkin_LIBRARIES})
+#target_link_libraries(taurob_state_publisher ${catkin_LIBRARIES})
+target_link_libraries(statepublisher ${catkin_LIBRARIES} libMoroTF)
+target_link_libraries(assemblescans ${catkin_LIBRARIES})
 #target_link_libraries(example ${PROJECT_NAME})
